src/test/ui/rfc-2632-const-trait-impl/staged-api-user-crate.stderr
error[E0015]: cannot call non-const fn `<staged_api::Unstable as staged_api::MyTrait>::func` in constant functions
  --> $DIR/staged-api-user-crate.rs:12:5
   |
LL |     Unstable::func();
   |     ^^^^^^^^^^^^^^^^
   |
   = note: calls in constant functions are limited to constant functions, tuple structs and tuple variants

error: aborting due to previous error

For more information about this error, try `rustc --explain E0015`.
